# sayge

./: .gitignore  Procfile  README.md  package.json  pyproject.toml  tox.ini
client/: .eslintrc.json  config-overrides.js  package.json
client/public/: index.html
client/src/: ActiveDate.js  Admin.js  App.js  AvatarWithMenu.js  Chart.js  Home.js  Navigation.js  RecoilData.js  SalesSection.js  StoreLabel.js  ThemeOverview.js  ThemeSwitcher.js  Toolbar.js  atoms.js  theme.js
client/src/company-snapshot/: index.js
client/src/stories/: 0-Dashboard.stories.js
docs/: development.md  emails.md  environment.md  javascript.md  python.md  users.md
server/emails/: api.py
server/sayge_ai/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
server/scripts/: DWD_REP_DAILY_SUMMARY.py  general_information.py
server/snowflake_scripts/: utils.py  validate.py
server/snowflake_utils/: __init__.py
server/stores/: api.py  serializers.py  snowflake_data.py  snowflake_sql.py
server/tests/: conftest.py  test_company_snapshot.py  test_create_users.py  test_send_emails.py  test_snowflake_data.py
server/ui/templates/: base.html  home.html
server/users/: models.py  serializers.py
server/users/migrations/: 0001_initial.py  0002_remove_user_extra_field.py
